--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.nav{
+  width: 100%;
+  background-color: #21222A;
+}
+.navBar{
+  width: 90%;
+  color: white;
+  display: flex;
+  height: 45px;
+  padding: 15px 12.5px;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo{
+  display: flex;
+  align-items: center;
+}
+
+.logo-title{
+  color: #10b4f5;
+}
+
+.right{
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  justify-content: center;
+}
+
+.right > ul{
+ display: flex;
+ flex-direction: row;
+ list-style: none;
+}
+
+.nav-items{
+  margin-right: 40px;
+}
+
+.right > input{
+  height: 40px;
+  width: 250px;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
+.Footer{
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  justify-content: center;
+}
