--- a/src/index.css
+++ b/src/index.css
@@ -16,24 +16,29 @@ code {
   background-color: #21222A;
 }
 .navBar{
-  width: 90%;
+  width: 60%;
   color: white;
   display: flex;
-  height: 45px;
+  height: 70px;
   padding: 15px 12.5px;
   align-items: center;
   justify-content: space-between;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 460px;
 }
 
 .logo{
   display: flex;
   align-items: center;
+  margin-left: 20px;
 }
 
 .logo-title{
   color: #10b4f5;
+  font-size: 23px;
+  margin-left: 10px;
+  font-weight: 700;
+  margin-top: 10px;
 }
 
 .right{
@@ -47,16 +52,21 @@ code {
  display: flex;
  flex-direction: row;
  list-style: none;
+ font-size: 18px;
+ margin-top: 25px;
 }
 
 .nav-items{
-  margin-right: 40px;
+  margin-right: 30px;
+  font-weight: 200;
+
 }
 
 .right > input{
   height: 40px;
   width: 250px;
   font-size: 20px;
+  border: none;
   border-radius: 10px;
 }
 
@@ -65,5 +75,90 @@ code {
   position: fixed;
   bottom: 0;
   width: 100%;
-  justify-content: center;
+  margin-right: auto;
+
+}
+
+.firstC{
+  background-color: #353935;
+  color: white;
+  font-size: 20px;
+
+}
+
+.secondC{
+  background-color: white;
+  font-size: 20px;
+}
+
+.thirdC{
+  background-color: #f7f7f7;
+  font-size: 20px;
+
+}
+
+.BodyRow{
+  height: 5000px;
+  background-color: black;
+  margin-top: 20px;
+}
+
+.BodyContent{
+  margin-top: 100px;
+  margin-left: 10px;
+}
+
+.ContentTitle{
+  font-size: 60px;
+  font-weight: 700;
+}
+
+
+.Desk{
+  height: 100px;
+  width: 93%;
+  margin-top: 60px;
+  background-color: rgb(255, 221, 215);
+  display: flex;
+  justify-self: center;
+  margin-right: 100px;
+}
+
+.Desk > h6{
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.SS{
+  background-color: red;
+  width: 8px;
+}
+
+
+ul{
+  list-style: none;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.PInfo > li{
+  margin-top: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  color: grey;  
+}
+
+
+.Contact{
+  font-size: 40px;
+  font-weight: 500;
+  margin-top: 20px;
+  color: black;
+}
+
+.fullname{
+  margin-top: 20px;
 }
