--- a/src/index.css
+++ b/src/index.css
@@ -75,37 +75,35 @@ code {
   position: fixed;
   bottom: 0;
   width: 100%;
-  margin-right: auto;
-
+  background-color: #353935;
+  color: white;
+  align-items: center;
+  text-align: center;
 }
 
 .firstC{
   background-color: #353935;
   color: white;
-  font-size: 20px;
-
 }
 
 .secondC{
   background-color: white;
-  font-size: 20px;
+
 }
 
 .thirdC{
   background-color: #f7f7f7;
-  font-size: 20px;
-
 }
 
 .BodyRow{
-  height: 5000px;
+  height: 600px;
   background-color: black;
-  margin-top: 20px;
+  
 }
 
 .BodyContent{
-  margin-top: 100px;
   margin-left: 10px;
+  height: 100%;
 }
 
 .ContentTitle{
@@ -117,7 +115,7 @@ code {
 .Desk{
   height: 100px;
   width: 93%;
-  margin-top: 60px;
+  margin-top: 20px;
   background-color: rgb(255, 221, 215);
   display: flex;
   justify-self: center;
@@ -135,6 +133,7 @@ code {
   background-color: red;
   width: 8px;
 }
+
 
 
 ul{
@@ -161,4 +160,12 @@ ul{
 
 .fullname{
   margin-top: 20px;
+}
+
+.Taable{
+  margin-top: 90px;
+}
+
+.deleteB{
+  border: 0px solid black;
 }
